--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.Debt">
         <activity
-                android:name=".HomeActivity">
+                android:name=".ui.activities.HomeActivity">
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
