Force the app in portrait mode.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.Debt">
         <activity
-                android:name=".ui.activities.HomeActivity">
+                android:name=".ui.activities.HomeActivity" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".ui.activities.StartActivity">
+        <activity android:name=".ui.activities.StartActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
